--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -21,6 +21,31 @@ jobs:
       - name: Run Bandit
         run: bandit -r .
 
+  build:
+        name: Build image
+        # needs: [sast-tests, dast-tests, sca-tests]
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout the repo
+              uses: actions/checkout@v4
+
+            - name: Login to Docker Hub
+              uses: docker/login-action@v3
+              with:
+                  username: ${{ secrets.DOCKER_USERNAME }}
+                  password: ${{ secrets.DOCKER_PASSWORD }}
+
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v3
+
+            - name: Build and push
+              uses: docker/build-push-action@v5
+              with:
+                  context: .
+                  file: ./Dockerfile
+                  push: true
+                  tags: ${{ secrets.DOCKER_USERNAME }}/projekt_tbo:beta
+
   dast-tests:
     name: Run DAST Tests
     runs-on: ubuntu-latest
@@ -32,9 +57,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Perform ZAP Baseline Scan
-        uses: zaproxy/action-baseline@v0.12.0
+        uses: zaproxy/action-baseline@v0.10.0
         with:
-          target: ${{ secrets.SERVER_URI }}
+          target: 'http://localhost:80/'
           allow_issue_writing: false
 
   sca-tests:
@@ -44,16 +69,17 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Execute Dependency Check
-        uses: dependency-check/Dependency-Check_Action@v3
+      - name: Run dependency-check
+        uses: dependency-check/Dependency-Check_Action@main
         with:
           project: "projekt-tbo"
           path: "."
           format: "HTML"
           out: "reports"
 
-      - name: Upload Dependency Check Results
+      - name: Send Dependency Check Results
         uses: actions/upload-artifact@v2
         with:
           name: Dependency Check Report
           path: ${{ github.workspace }}/reports
+
