--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -60,7 +60,7 @@ jobs:
 
   build:
     name: Build image
-    # needs: [sast-tests, dast-tests, sca-tests]
+    needs: [sast-tests, dast-tests, sca-tests]
     runs-on: ubuntu-latest
     steps:
         - name: Checkout the repo
