Add workflows to build-push

--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -4,11 +4,16 @@ on:
   push:
     branches:
       - master
+  workflow_run:
+    workflows: [sca-tests, dast-tests, sast-tests]
+    types:
+      - completed
   workflow_dispatch:
+    
 
 jobs: 
   build:
-    needs: [sast-tests, dast-tests, sca-tests]
+    # needs: [sast-tests, dast-tests, sca-tests]
     runs-on: ubuntu-latest
     steps:
         - name: Checkout the repo
