--- a/.github/workflows/cicd-build-beta.yml
+++ b/.github/workflows/cicd-build-beta.yml
@@ -17,6 +17,7 @@ jobs:
         uses: gitleaks/gitleaks-action@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITLEAKS_ENABLE_SUMMARY: false
       - name: Install Bandit Package
         if: always()
         run: pip3 install bandit
