--- a/.github/workflows/cicd-build-latest.yml
+++ b/.github/workflows/cicd-build-latest.yml
@@ -1,10 +1,8 @@
 name: Build latest on "master"
 
 on:
-  push:
-    branches:
-      - master
-  workflow_dispatch:
+  pull_request:
+      types: [opened, reopened, edited] # run cicd on pr
 
 jobs:
   sast-tests:
