Forgot to change cicd-latest tag image

--- a/.github/workflows/cicd-build-latest.yml
+++ b/.github/workflows/cicd-build-latest.yml
@@ -82,5 +82,5 @@ jobs:
               context: .
               file: ./Dockerfile
               push: true
-              tags: ${{ secrets.DOCKER_USERNAME }}/projekt_tbo:beta
+              tags: ${{ secrets.DOCKER_USERNAME }}/projekt_tbo:latest
 
