Test pr featur -> master

--- a/.github/workflows/cicd-build-latest.yml
+++ b/.github/workflows/cicd-build-latest.yml
@@ -83,4 +83,5 @@ jobs:
               file: ./Dockerfile
               push: true
               tags: ${{ secrets.DOCKER_USERNAME }}/projekt_tbo:latest
+#some changes for pr test
 
