--- a/.github/workflows/cicd-build-latest.yml
+++ b/.github/workflows/cicd-build-latest.yml
@@ -2,7 +2,10 @@ name: Build latest on "master"
 
 on:
   pull_request:
-      types: [opened, reopened, edited] # run cicd on pr
+      branches:
+      - master
+      types: [opened, reopened, edited]
+  workflow_dispatch:
 
 jobs:
   sast-tests:
@@ -83,5 +86,3 @@ jobs:
               file: ./Dockerfile
               push: true
               tags: ${{ secrets.DOCKER_USERNAME }}/projekt_tbo:latest
-#some changes for pr test
-
