--- a/.github/workflows/cicd-build-beta.yml
+++ b/.github/workflows/cicd-build-beta.yml
@@ -2,9 +2,8 @@ name: Build beta
 
 on:
   push:
-    branches:
-      - '*'
-      - '!main'
+    branches-ignore:
+        - master
   workflow_dispatch:
 
 jobs:
