--- a/.github/workflows/cicd-build-beta.yml
+++ b/.github/workflows/cicd-build-beta.yml
@@ -88,4 +88,4 @@ jobs:
               file: ./Dockerfile
               push: true
               tags: ${{ secrets.DOCKER_USERNAME }}/projekt_tbo:beta
-#pr test, anotherrr
+#pr test, anotherrrr
