--- a/.github/workflows/cicd-build-beta.yml
+++ b/.github/workflows/cicd-build-beta.yml
@@ -2,8 +2,9 @@ name: Build beta
 
 on:
   push:
-      branches-ignore:
-          - master
+    branches-ignore:
+      - master
+      - main
   workflow_dispatch:
 
 jobs:
