--- a/.github/workflows/cicd-build-latest.yml
+++ b/.github/workflows/cicd-build-latest.yml
@@ -2,9 +2,10 @@ name: Build latest on "master"
 
 on:
   pull_request:
-      branches:
+    branches:
       - master
-      types: [opened, reopened, edited]
+      - main
+    types: [opened, reopened, edited]
   workflow_dispatch:
 
 jobs:
