--- a/.github/workflows/cicd-build-latest.yml
+++ b/.github/workflows/cicd-build-latest.yml
@@ -85,4 +85,4 @@ jobs:
               push: true
               tags: ${{ secrets.DOCKER_USERNAME }}/projekt_tbo:latest
 
-              #small change to test prrrrrr
+              #small change to test prrrrrrr
