--- a/.github/workflows/cicd-build-latest.yml
+++ b/.github/workflows/cicd-build-latest.yml
@@ -2,7 +2,15 @@ name: Build latest on "master"
 
 on:
   pull_request:
-      types: [opened, reopened, edited] # run cicd on pr
+    types: [opened, reopened, edited]
+    branches:
+      - master
+      - main
+  push:
+   branches:
+     - master
+     - main
+  workflow_dispatch:
 
 jobs:
   sast-tests:
