--- a/.github/workflows/cicd-build-beta.yml
+++ b/.github/workflows/cicd-build-beta.yml
@@ -71,11 +71,19 @@ jobs:
     name: Unit tests runner
     runs-on: ubuntu-latest
     steps:
-      - name: Install pytest
-        run: pip3 install pytest
-
-      - name: Run pytest
-        run: python -m pytest
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Test with pytest
+        run: |
+          pip install pytest pytest-cov
+          pytest
 
   build:
     name: Build and push beta image
