Bandit dont cry about assert in tests

--- a/.github/workflows/cicd-build-beta.yml
+++ b/.github/workflows/cicd-build-beta.yml
@@ -28,7 +28,7 @@ jobs:
         if: always()
         run: pip3 install bandit
       - name: Run Bandit
-        run: bandit -r .
+        run: bandit -r --skip B101 .
 
   dast-tests:
     name: Compose and Run DAST scans (ZAP)
