--- a/.github/workflows/cicd-build-latest.yml
+++ b/.github/workflows/cicd-build-latest.yml
@@ -87,7 +87,7 @@ jobs:
 
   build:
     name: Build and push latest image
-    needs: [sast-tests, dast-tests, sca-tests]
+    needs: [sast-tests, dast-tests, sca-tests, unit-tests]
     runs-on: ubuntu-latest
     steps:
         - name: Checkout the repo
