--- a/.github/workflows/cicd-build-beta.yml
+++ b/.github/workflows/cicd-build-beta.yml
@@ -1,11 +1,6 @@
 name: Build beta
 
 on:
-  pull_request:
-    types: [opened, reopened, edited]
-    branches-ignore:
-      - master
-      - main
   push:
     branches-ignore:
       - master
@@ -34,8 +29,8 @@ jobs:
     name: Compose and Run DAST scans (ZAP)
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - name: Checkout Repository
+        uses: actions/checkout@v4
       - name: Build image
         run: docker-compose up -d
       - name: ZAP scans
@@ -72,7 +67,7 @@ jobs:
     needs: [sast-tests, dast-tests, sca-tests]
     runs-on: ubuntu-latest
     steps:
-        - name: Checkout the repo
+        - name: Checkout Repository
           uses: actions/checkout@v4
 
         - name: Login to Docker Hub
